--- a/Weather/Weather.csproj
+++ b/Weather/Weather.csproj
@@ -7,4 +7,9 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Data\Data.csproj" />
+    <ProjectReference Include="..\Models\Components.csproj" />
+  </ItemGroup>
+
 </Project>
